# Homework_CPPM_11

01/Greet/: Greet.vcxproj  Source.cpp
01/Greeter/: Greeter.cpp  Greeter.h  Greeter.sln  Greeter.vcxproj
02/Leave/: Leave.vcxproj  Source.cpp
02/Leaver_VS/: Leaver.cpp  Leaver.h  Leaver_VS.sln  Leaver_VS.vcxproj
03/: CMakeLists.txt  Leaver.h
04/Figure_dynamic_lib/: EquilateralTriangle.h  Figure.h  Figure_dynamic_lib.sln  Figure_dynamic_lib.vcxproj  Figure_dynamic_lib.vcxproj.filters  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Rhombus.h  RightTriangle.h
04/Figure_project/: Figure_project.vcxproj
05/: CMakeLists.txt  Figure.cpp  Figure.h  Quadrangle.h  Rectangle.h  Square.h  Triangle.h
